[project]
name = "ghostapi"
version = "0.1.0"
description = "Turn Python functions into APIs instantly with built-in auth"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic[email]",
    "python-jose[cryptography]",
    "passlib[bcrypt]"
]

[project.scripts]
ghostapi = "ghostapi.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
